--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <script>
         function sayHello() {
-            const greetings = ["Hello, World!", "Molweni, Elizweni!", "Bonjour, le Monde!", "Hallo, Welt!", "hallo, wêreld!"];
+            const greetings = ["Hello, World!", "Molweni, Lizwe!", "Bonjour, le Monde!", "Hallo, Welt!", "hallo, wêreld!"];
             const randomGreeting = greetings[Math.floor(Math.random() * greetings.length)];
             document.getElementById("greeting").textContent = randomGreeting;
         }
